@@ -23,150 +23,6 @@ namespace PloppableRICO
             return button;
         }
 
-
-        public static UIDropDown CreateDropDown(UIComponent parent, float offset, string label)
-        {
-            UIPanel container = parent.AddUIComponent<UIPanel>();
-            container.height = 25;
-            container.relativePosition = new Vector3(0, offset, 0);
-
-            UILabel serviceLabel = container.AddUIComponent<UILabel>();
-            serviceLabel.textScale = 0.8f;
-            serviceLabel.text = label;
-            serviceLabel.relativePosition = new Vector3(15, 6, 0);
-
-
-            UIDropDown dropDown = container.AddUIComponent<UIDropDown>();
-            dropDown.size = new Vector2(180f, 25f);
-            dropDown.listBackground = "GenericPanelLight";
-            dropDown.itemHeight = 20;
-            dropDown.itemHover = "ListItemHover";
-            dropDown.itemHighlight = "ListItemHighlight";
-            dropDown.normalBgSprite = "ButtonMenu";
-            dropDown.disabledBgSprite = "ButtonMenuDisabled";
-            dropDown.hoveredBgSprite = "ButtonMenuHovered";
-            dropDown.focusedBgSprite = "ButtonMenu";
-            dropDown.listWidth = 180;
-            dropDown.listHeight = 500;
-            dropDown.foregroundSpriteMode = UIForegroundSpriteMode.Stretch;
-            dropDown.popupColor = new Color32(45, 52, 61, 255);
-            dropDown.popupTextColor = new Color32(170, 170, 170, 255);
-            dropDown.zOrder = 1;
-            dropDown.textScale = 0.7f;
-            dropDown.verticalAlignment = UIVerticalAlignment.Middle;
-            dropDown.horizontalAlignment = UIHorizontalAlignment.Left;
-
-            dropDown.textFieldPadding = new RectOffset(8, 0, 8, 0);
-            dropDown.itemPadding = new RectOffset(14, 0, 8, 0);
-
-            dropDown.relativePosition = new Vector3(112, 0, 0);
-
-            UIButton button = dropDown.AddUIComponent<UIButton>();
-            dropDown.triggerButton = button;
-            button.text = "";
-            button.size = new Vector2(180f, 25f);
-            button.relativePosition = new Vector3(0f, 0f);
-            button.textVerticalAlignment = UIVerticalAlignment.Middle;
-            button.textHorizontalAlignment = UIHorizontalAlignment.Left;
-            button.normalFgSprite = "IconDownArrow";
-            button.hoveredFgSprite = "IconDownArrowHovered";
-            button.pressedFgSprite = "IconDownArrowPressed";
-            button.focusedFgSprite = "IconDownArrowFocused";
-            button.disabledFgSprite = "IconDownArrowDisabled";
-            button.spritePadding = new RectOffset(3,3,3,3);
-            button.foregroundSpriteMode = UIForegroundSpriteMode.Fill;
-            button.horizontalAlignment = UIHorizontalAlignment.Right;
-            button.verticalAlignment = UIVerticalAlignment.Middle;
-            button.zOrder = 0;
-            button.textScale = 0.8f;
-
-            dropDown.eventSizeChanged += new PropertyChangedEventHandler<Vector2>((c, t) =>
-            {
-                button.size = t; dropDown.listWidth = (int)t.x;
-            });
-
-
-            // Allow for long translation strings.
-            dropDown.autoListWidth = true;
-
-            return dropDown;
-        }
-
-        public static UICheckBox CreateCheckBox(UIComponent parent, int offset, string label)
-        {
-            UIPanel container = parent.AddUIComponent<UIPanel>();
-            container.height = 25;
-            container.width = 270;
-            container.relativePosition = new Vector3(0, offset, 0);
-
-            UICheckBox checkBox = container.AddUIComponent<UICheckBox>();
-
-            checkBox.width = container.width;
-            checkBox.height = 20f;
-            checkBox.clipChildren = true;
-            checkBox.relativePosition = new Vector3(210, 6);
-
-            UISprite sprite = checkBox.AddUIComponent<UISprite>();
-            sprite.spriteName = "ToggleBase";
-            sprite.size = new Vector2(16f, 16f);
-            sprite.relativePosition = Vector3.zero;
-
-            checkBox.checkedBoxObject = sprite.AddUIComponent<UISprite>();
-            ((UISprite)checkBox.checkedBoxObject).spriteName = "ToggleBaseFocused";
-            checkBox.checkedBoxObject.size = new Vector2(16f, 16f);
-            checkBox.checkedBoxObject.relativePosition = Vector3.zero;
-
-            UILabel serviceLabel = container.AddUIComponent<UILabel>();
-            serviceLabel.textScale = 0.8f;
-            serviceLabel.text = label;
-            serviceLabel.relativePosition = new Vector3(15, 6, 0);
-
-            // algernon
-            serviceLabel.autoSize = false;
-            serviceLabel.width = 180f;
-            serviceLabel.autoHeight = true;
-            serviceLabel.wordWrap = true;
-
-            return checkBox;
-        }
-
-
-        public static UICheckBox CreateCheckBar(UIComponent parent, string label, float width)
-        {
-
-            UIPanel basePanel = parent.AddUIComponent<UIPanel>();
-            basePanel.height = 25;
-            basePanel.backgroundSprite = "ScrollbarTrack";
-            basePanel.width = width;
-            basePanel.relativePosition = new Vector3(0, 5);
-
-            UICheckBox checkBox = basePanel.AddUIComponent<UICheckBox>();
-            checkBox.width = basePanel.width;
-            checkBox.height = 20f;
-            checkBox.clipChildren = true;
-            checkBox.relativePosition = new Vector3(7, 4, 0);
-
-            UISprite sprite = checkBox.AddUIComponent<UISprite>();
-            sprite.spriteName = "ToggleBase";
-            sprite.size = new Vector2(16f, 16f);
-            sprite.relativePosition = Vector3.zero;
-
-            checkBox.checkedBoxObject = sprite.AddUIComponent<UISprite>();
-            ((UISprite)checkBox.checkedBoxObject).spriteName = "ToggleBaseFocused";
-            checkBox.checkedBoxObject.size = new Vector2(16f, 16f);
-            checkBox.checkedBoxObject.relativePosition = Vector3.zero;
-
-            checkBox.label = checkBox.AddUIComponent<UILabel>();
-            checkBox.label.text = label;
-            checkBox.label.textScale = 0.8f;
-            checkBox.label.autoSize = false;
-            checkBox.label.size = new Vector2(190f,18f);
-            checkBox.label.textAlignment = UIHorizontalAlignment.Center;
-            checkBox.label.relativePosition = new Vector3(25f, 2f);
-
-            return checkBox;
-        }
-
         public static UICheckBox CreateIconToggle(UIComponent parent, string atlas, string checkedSprite, string uncheckedSprite)
         {
             UICheckBox checkBox = parent.AddUIComponent<UICheckBox>();
